Bug 1220844 - Remove the interactive embed from SmartOn Tracking
Fall back to a plain link, opens in a new tab.

--- a/bedrock/teach/templates/teach/smarton/tracking.html
+++ b/bedrock/teach/templates/teach/smarton/tracking.html
@@ -68,9 +68,11 @@
               {{ high_res_img('teach/smarton/tracking/donottrackdoc-poster.jpg', {'alt': _('Watch the documentary at donottrack-doc.com.'), 'width': '620', 'height': '349'}) }}
             </a>
           </p>
+        {# Hide the interactive embed
           <div id="video-donottrack" class="modal-video-wrap ratio-4x3">
             <iframe class="modal-video-frame" frameborder="0" allowfullscreen></iframe>
           </div>
+        #}
         </div>
         <figcaption>
           <p>
