Fix SmartOn short URL for social sharing

--- a/bedrock/teach/templates/teach/smarton/tracking.html
+++ b/bedrock/teach/templates/teach/smarton/tracking.html
@@ -24,7 +24,7 @@
 <article class="main">
 
   {# Navbar macro. Params: Page title, tweet text, Twitter URL, Facebook URL, Google+ URL #}
-  {{ smarton_navbar(_('Tracking'), _('What you do online is your business, and you can keep it that way. Get smart on tracking.') + hashtag, 'https://mzl.la/tracking', 'https://www.mozilla.org/teach/smarton/tracking/', 'https://www.mozilla.org/teach/smarton/tracking/') }}
+  {{ smarton_navbar(_('Tracking'), _('What you do online is your business, and you can keep it that way. Get smart on tracking.') + hashtag, 'http://mzl.la/tracking', 'https://www.mozilla.org/teach/smarton/tracking/', 'https://www.mozilla.org/teach/smarton/tracking/') }}
 
   <section id="ask" class="section section-ask">
     <div class="content">
@@ -368,7 +368,7 @@
             <p>
               <span class="chat-question">{{ _('What privacy settings do you use in your browser?') }}</span>
               <span class="tweet-this">
-                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('https://mzl.la/tracking'|urlencode, _('What privacy settings do you use in your browser?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
+                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('http://mzl.la/tracking'|urlencode, _('What privacy settings do you use in your browser?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
               </span>
             </p>
             {% include 'teach/smarton/includes/list-number-1.svg' %}
@@ -377,7 +377,7 @@
             <p>
               <span class="chat-question">{{ _('How much are you willing to share about yourself in exchange for personalized content?') }}</span>
               <span class="tweet-this">
-                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('https://mzl.la/tracking'|urlencode, _('How much are you willing to share about yourself in exchange for personalized content?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
+                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('http://mzl.la/tracking'|urlencode, _('How much are you willing to share about yourself in exchange for personalized content?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
               </span>
             </p>
             {% include 'teach/smarton/includes/list-number-2.svg' %}
@@ -386,7 +386,7 @@
             <p>
               <span class="chat-question">{{ _('Have you ever used private browsing?') }}</span>
               <span class="tweet-this">
-                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('https://mzl.la/tracking'|urlencode, _('Have you ever used private browsing?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
+                <a class="button-tweet" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s%s'|format('http://mzl.la/tracking'|urlencode, _('Have you ever used private browsing?')|urlencode, hashtag|urlencode)|e }}">{{ _('Tweet this') }}</a>
               </span>
             </p>
             {% include 'teach/smarton/includes/list-number-3.svg' %}
