Bug 1221167 - Make alt text on Google Play button localizable

--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -97,7 +97,7 @@
 
         <div class="btn-google-play">
           <a rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-product="Firefox for Android, Google Play">
-            {{ high_res_img('firefox/android/btn-google-play.png', {'alt': 'Get it on Google Play', 'width': '129', 'height': '45', 'l10n': True}) }}
+            {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '129', 'height': '45', 'l10n': True}) }}
           </a>
           <small class="download-other">
             <a href="{{ url('firefox.android.all') }}">{{_('Systems &amp; Languages')}}</a>
