--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -35,7 +35,7 @@
   {% call fxfamilynav('android', 'index') %}
     <div class="{% if has_widget %}show-widget{% endif %}">
       <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">
-        {{ high_res_img('firefox/android/btn-google-play.png', {'alt': 'Get it on Google Play', 'width': '129', 'height': '45', 'l10n': True}) }}
+        {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '129', 'height': '45', 'l10n': True}) }}
       </a>
       <button class="send-to button-flat-dark" type="button">{{ _('Get Firefox for Android') }}</button>
     </div>
@@ -60,7 +60,7 @@
 
       <div class="send-to-device-variant dl-button-wrapper {% if has_widget %}show-widget{% endif %}" id="send-to-device-default">
         <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-button-type="download" data-interaction="download click" data-download-version="Firefox for Android">
-          {{ high_res_img('firefox/android/btn-google-play.png', {'alt': 'Get it on Google Play', 'width': '129', 'height': '45', 'l10n': True}) }}
+          {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '129', 'height': '45', 'l10n': True}) }}
         </a>
         <small class="download-other">
           <a class="dl-button" href="{{ url('firefox.android.all') }}">{{_('Systems &amp; Languages')}}</a>
@@ -77,7 +77,7 @@
 
       <div class="send-to-device-variant" id="send-to-device-google-play">
         <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-button-type="download" data-interaction="download click" data-download-version="Firefox for Android">
-          {{ high_res_img('firefox/android/test/btn-google-play.png', {'alt': 'Get it on Google Play', 'width': '200', 'height': '69'}) }}
+          {{ high_res_img('firefox/android/test/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '200', 'height': '69'}) }}
         </a>
       </div>
 
@@ -409,7 +409,7 @@
           <h3>{{ _('Choose Firefox') }}</h3>
           <div id="send-to-device-footer">
             <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-button-type="download" data-interaction="button download click" data-download-version="Firefox for Android" data-alt="{{ _('Get Firefox for Android') }}">
-              {{ high_res_img('firefox/android/btn-google-play.png', {'alt': 'Get it on Google Play', 'width': '129', 'height': '45', 'l10n': True}) }}
+              {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '129', 'height': '45', 'l10n': True}) }}
             </a>
             <button class="send-to button-flat-dark" type="button">{{ _('Get Firefox for Android') }}</button>
           </div>
