[fix bug 1221223] Change param

--- a/bedrock/firefox/templates/firefox/choose.html
+++ b/bedrock/firefox/templates/firefox/choose.html
@@ -53,13 +53,13 @@
         {{ _('Take control of your web by using Private Browsing with Tracking Protection, only from Firefox.') }}
       {% endif %}
     </p>
-    <a href="{{ url('firefox.private-browsing') }}?utm_campaign=fx-fall-15" class="more">{{ _('Learn more about this') }}</a>
+    <a href="{{ url('firefox.private-browsing') }}?c=fx-fall-15" class="more">{{ _('Learn more about this') }}</a>
   </div>
 
   <div class="blurb">
     <h2 class="data">{{ _('Here for you, not selling your info') }}</h2>
     <p>{{ _('Discover easy tips about how to take back control of your online experience, only from Mozilla.') }}</p>
-    <a href="{{ url('teach.smarton.tracking') }}?utm_campaign=fx-fall-15" class="more">{{ _('Get smart on data tracking') }}</a>
+    <a href="{{ url('teach.smarton.tracking') }}?c=fx-fall-15" class="more">{{ _('Get smart on data tracking') }}</a>
   </div>
 </section>
 {% endblock %}
