Fix Bug 1221826, update header and footer donate urls en-US only

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -103,7 +103,7 @@
             <a data-link-type="firefox" data-element-location="nav click" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a>
           </li>
           <li class="last donate-item">
-            <a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('mozillaorg_topNAV') }}">{{_('Donate')}}</a>
+            <a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('header') }}">{{_('Donate')}}</a>
           </li>
         </ul>
       </nav>
