--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -14,7 +14,7 @@
             <ul class="links-join">
               <li><a href="{{ url('mozorg.contact.contact-landing') }}">{{ _('Contact Us') }}</a></li>
               <li class="wrap"><a href="{{ url('mozorg.partnerships') }}">{{ _('Partner with Us' ) }}</a></li>
-              <li class="clear"><a href="{{ donate_url('mozillaorg_footer') }}" class="donate">{{ _('Donate') }}</a></li>
+              <li class="clear"><a href="{{ donate_url('footer') }}" class="donate">{{ _('Donate') }}</a></li>
               <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}">{{ _('Firefox Friends') }}</a></li>
               <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org">{{ _('Contribute to this site') }}</a></li>
             </ul>
