Fix Bug 1222144, fixes source parameter on manifesto page

--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -301,7 +301,7 @@
         <section id="sec-learn">
           <h2>{{ _('Learn more about…') }}</h2>
           <ul>
-            <li><a href="{{ donate_url() }}?source=mozillaorg_manifesto">{{ _('Donating to Mozilla') }}</a></li>
+            <li><a href="{{ donate_url('mozillaorg_manifesto') }}">{{ _('Donating to Mozilla') }}</a></li>
             <li><a href="{{ url('mozorg.about.history') }}">{{ _('Our history') }}</a></li>
             <li><a href="{{ url('mozorg.mission') }}">{{ _('Our mission') }}</a></li>
           </ul>
