Point tracking protection link to private browsing product page on iOS product page

--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -169,7 +169,7 @@
       <li id="private-browsing">
         <h3>{{ _('Private Browsing') }}</h3>
         <p>{{ _('When activated, Firefox for iOS won’t accept cookies, remember passwords or record any sites that you’ve visited.') }}</p>
-        <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info">{{ _('Learn more about Private Browsing') }}</a>
+        <a href="{{ url('firefox.private-browsing') }}">{{ _('Learn more about Private Browsing') }}</a>
       </li>
     </ul>
   </div>{# /.container #}
